k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mailthing
  labels:
    app.kubernetes.io/name: mailthing
